--- a/notebooks/data_insights.ipynb
+++ b/notebooks/data_insights.ipynb
@@ -19,12 +19,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de47ec855f834dce928f4e52062ffdc2",
+       "model_id": "348efdd6b1614dc8a210ab44147271d6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Dataset:', options=('hosp/hospital_admissions (copy)', 'hosp/hospital_admissions'), valu…"
+       "Dropdown(description='Dataset:', options=('hosp/provider', 'hosp/services', 'hosp/d_icd_procedures', 'hosp/pre…"
       ]
      },
      "metadata": {},
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7e098e5be6746e28b217c836bd7cfa6",
+       "model_id": "fe62d60f0de54eb7be75c676618c4def",
        "version_major": 2,
        "version_minor": 0
       },
