Created QueryBuilder module to help users build SQL queries

--- a/notebooks/query_data.ipynb
+++ b/notebooks/query_data.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bq.display_sampled_df(results)"
+    "# bq.display_sampled_df(results)"
    ]
   }
  ],
