Updated QueryBuilder to work with physionet data

--- a/notebooks/data_insights.ipynb
+++ b/notebooks/data_insights.ipynb
@@ -2,24 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "98187a55-2adb-4a6b-9a83-d4562a442873",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mimicfouretl.data_insights import create_ui\n",
+    "from mimicfouretl.data_insights import display_datasets\n",
     "from mimicfouretl.feature_engineering import *\n",
     "import mimicfouretl.bigquery_utils as bq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6f4a6ca1-44ef-4126-a736-a1f03078ed65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b74e85fa3c9d4573894816da1c28533b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Dataset:', options=('hosp/provider', 'hosp/services', 'hosp/d_icd_procedures', 'hosp/pre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "416dee7fb6bd41cebee0ef8dbb2ddb80",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "create_ui()"
+    "display_datasets()"
    ]
   },
   {
