--- a/notebooks/query_builder.ipynb
+++ b/notebooks/query_builder.ipynb
@@ -26,6 +26,7 @@
     "## Step 3: Apply Filters\n",
     "You can filter your dataset based on certain conditions.\n",
     "\n",
+    "***Note: The QueryBuilder object can optionally be initialized with selected columns and filters.***\n",
     "```\n",
     "qb_main.apply_filters('column1 > 10')\n",
     "```\n",
@@ -45,12 +46,95 @@
     "final_query = qb_main.generate_query()\n",
     "```\n",
     "\n",
-    "***Note: Iteratively joining QueryBuilder objects to a main object is recommended for clarity.***"
+    "***Note: Iteratively joining QueryBuilder objects to a main object is recommended for clarity.***\n",
+    "\n",
+    "Example Usage:\n",
+    "```\n",
+    "# Example usage\n",
+    "admissions_qb = QueryBuilder(\"hosp.admissions\", \n",
+    "                   columns=[\"subject_id\", \"hadm_id\", \"admittime\", \"deathtime\"], \n",
+    "                   filters=[\"DATE_PART('day', deathtime - admittime) < 10\"])\n",
+    "labevents_qb = QueryBuilder(\"hosp.labevents\", \n",
+    "                   columns=[\"labevent_id\", \"subject_id\", \"hadm_id\", \"itemid\", \"charttime\"], \n",
+    "                   filters=[\"itemid = 51256\"])\n",
+    "patients_qb = QueryBuilder(\"hosp.patients\", \n",
+    "                   columns=[\"subject_id\", \"gender\", \"anchor_age\"], \n",
+    "                   filters=[\"gender = 'male'\", \"anchor_age > 65\"])\n",
+    "\n",
+    "admissions_qb.join_with(labevents_qb, \n",
+    "                        \"inner\", \n",
+    "                        [\"subject_id\", \"hadm_id\"] )\n",
+    "admissions_qb.join_with(patients_qb, \n",
+    "                        \"inner\", \n",
+    "                        [\"subject_id\"] )\n",
+    "\n",
+    "final_query = admissions_qb.generate_query()\n",
+    "print(final_query)\n",
+    "```\n",
+    "\n",
+    "Example Output:\n",
+    "```\n",
+    "SELECT anchor_age, gender, charttime, deathtime, itemid, hadm_id, subject_id, labevent_id, admittime\n",
+    "FROM `physionet_data.mimiciv_hosp.admissions`\n",
+    "INNER JOIN `physionet_data.mimiciv_hosp.labevents` ON physionet_data.mimiciv_hosp.admissions.subject_id = physionet_data.mimiciv_hosp.labevents.subject_id AND physionet_data.mimiciv_hosp.admissions.hadm_id = physionet_data.mimiciv_hosp.labevents.hadm_id\n",
+    "INNER JOIN `physionet_data.mimiciv_hosp.patients` ON physionet_data.mimiciv_hosp.admissions.subject_id = physionet_data.mimiciv_hosp.patients.subject_id\n",
+    "WHERE DATE_PART('day', deathtime - admittime) < 10 AND itemid = 51256 AND gender = 'male' AND anchor_age > 65\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9acabf14-454c-472a-bd7f-da2149b254fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mimicfouretl.data_insights import display_datasets\n",
+    "from mimicfouretl.query_builder import QueryBuilder"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f0809684-4855-4d2c-a2ee-667b5bdc321b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf6c0a1e1faa4ef1bdb168bffbed37c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Dataset:', options=('hosp.provider', 'hosp.services', 'hosp.d_icd_procedures', 'hosp.pre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "795d1cf174454d5bb8965f94150ba277",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display_datasets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "0493eb4d-3a03-454b-8c34-7abe628ee33b",
    "metadata": {},
    "outputs": [
@@ -58,52 +142,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT a1, a2, a3, b1, b2, b3, c1, c2, c3\n",
-      "FROM `data_a`\n",
-      "INNER JOIN `data_b` ON data_a.a1 = data_b.b1 AND data_a.a2 = data_b.b2\n",
-      "INNER JOIN `data_c` ON data_a.a1 = data_c.c1\n",
-      "WHERE a1 > 1 AND a2 < 3 AND b1 < 3 AND c1 = 5\n"
+      "SELECT anchor_age, gender, charttime, deathtime, itemid, hadm_id, subject_id, labevent_id, admittime\n",
+      "FROM `physionet_data.mimiciv_hosp.admissions`\n",
+      "INNER JOIN `physionet_data.mimiciv_hosp.labevents` ON physionet_data.mimiciv_hosp.admissions.subject_id = physionet_data.mimiciv_hosp.labevents.subject_id AND physionet_data.mimiciv_hosp.admissions.hadm_id = physionet_data.mimiciv_hosp.labevents.hadm_id\n",
+      "INNER JOIN `physionet_data.mimiciv_hosp.patients` ON physionet_data.mimiciv_hosp.admissions.subject_id = physionet_data.mimiciv_hosp.patients.subject_id\n",
+      "WHERE DATE_PART('day', deathtime - admittime) < 10 AND itemid = 51256 AND gender = 'male' AND anchor_age > 65\n"
      ]
     }
    ],
    "source": [
-    "from mimicfouretl.query_builder import QueryBuilder\n",
-    "\n",
     "# Example usage\n",
-    "qb1 = QueryBuilder(\"data_a\", columns=[\"a1\", \"a2\", \"a3\"], filters=[\"a1 > 1\", \"a2 < 3\"])\n",
+    "admissions_qb = QueryBuilder(\"hosp.admissions\", \n",
+    "                   columns=[\"subject_id\", \"hadm_id\", \"admittime\", \"deathtime\"], \n",
+    "                   filters=[\"DATE_PART('day', deathtime - admittime) < 10\"])\n",
+    "labevents_qb = QueryBuilder(\"hosp.labevents\", \n",
+    "                   columns=[\"labevent_id\", \"subject_id\", \"hadm_id\", \"itemid\", \"charttime\"], \n",
+    "                   filters=[\"itemid = 51256\"])\n",
+    "patients_qb = QueryBuilder(\"hosp.patients\", \n",
+    "                   columns=[\"subject_id\", \"gender\", \"anchor_age\"], \n",
+    "                   filters=[\"gender = 'male'\", \"anchor_age > 65\"])\n",
     "\n",
-    "qb2 = QueryBuilder(\"data_b\", filters=\"b1 < 3\")\n",
-    "qb2.select_columns([\"b1\", \"b2\", \"b3\"])\n",
+    "admissions_qb.join_with(labevents_qb, \n",
+    "                        \"inner\", \n",
+    "                        [\"subject_id\", \"hadm_id\"] )\n",
+    "admissions_qb.join_with(patients_qb, \n",
+    "                        \"inner\", \n",
+    "                        [\"subject_id\"] )\n",
     "\n",
-    "qb3 = QueryBuilder(\"data_c\", columns=[\"c1\", \"c2\", \"c3\"])\n",
-    "qb3.apply_filters(\"c1 = 5\")\n",
-    "\n",
-    "qb1.join_with(qb2, \"inner\", [\"data_a.a1 = data_b.b1\", \"data_a.a2 = data_b.b2\"] )\n",
-    "qb1.join_with(qb3, \"inner\", \"data_a.a1 = data_c.c1\")\n",
-    "\n",
-    "final_query = qb1.generate_query()\n",
+    "final_query = admissions_qb.generate_query()\n",
     "print(final_query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "68cc9e8e-0f8f-4d4e-aefa-4e2049db617e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if None:\n",
-    "    print(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8998407e-1f9c-4fea-9933-fb972a0668df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
    ]
   }
  ],
