Improved user guide for phenotyping engine and query builder

--- a/notebooks/query_builder.ipynb
+++ b/notebooks/query_builder.ipynb
@@ -12,14 +12,14 @@
     "## Step 1: Initialize the QueryBuilder\n",
     "Start by creating a `QueryBuilder` object for your primary dataset.\n",
     "\n",
-    "```\n",
+    "```python\n",
     "qb_main = QueryBuilder('main_dataset_name')\n",
     "```\n",
     "\n",
     "## Step 2: Select Columns (Optional)\n",
     "If you need specific columns from your dataset, use the select_columns method.\n",
     "\n",
-    "```\n",
+    "```python\n",
     "qb_main.select_columns(['column1', 'column2'])\n",
     "```\n",
     "\n",
@@ -27,13 +27,13 @@
     "You can filter your dataset based on certain conditions.\n",
     "\n",
     "***Note: The QueryBuilder object can optionally be initialized with selected columns and filters.***\n",
-    "```\n",
+    "```python\n",
     "qb_main.apply_filters('column1 > 10')\n",
     "```\n",
     "## Step 4: Join with Other Datasets\n",
     "To join your main dataset with others, create additional QueryBuilder instances and join them.\n",
     "\n",
-    "```\n",
+    "```python\n",
     "qb_additional = QueryBuilder('additional_dataset_name')\n",
     "qb_additional.select_columns(['columnA', 'columnB'])\n",
     "qb_additional.apply_filters('columnA = value')\n",
@@ -42,14 +42,14 @@
     "## Step 5: Generate the Final Query\n",
     "Once all joins and filters are applied, use generate_query to create your SQL query.\n",
     "\n",
-    "```\n",
+    "```python\n",
     "final_query = qb_main.generate_query()\n",
     "```\n",
     "\n",
     "***Note: Iteratively joining QueryBuilder objects to a main object is recommended for clarity.***\n",
     "\n",
     "### Example Usage:\n",
-    "```\n",
+    "```python\n",
     "admissions_qb = QueryBuilder(\"hosp.admissions\", \n",
     "                   columns=[\"subject_id\", \"hadm_id\", \"admittime\", \"deathtime\"], \n",
     "                   filters=[\"DATE_PART('day', deathtime - admittime) < 10\"])\n",
@@ -72,7 +72,7 @@
     "```\n",
     "\n",
     "### Example Output:\n",
-    "```\n",
+    "```sql\n",
     "SELECT anchor_age, gender, charttime, deathtime, itemid, hadm_id, subject_id, labevent_id, admittime\n",
     "FROM `physionet_data.mimiciv_hosp.admissions`\n",
     "INNER JOIN `physionet_data.mimiciv_hosp.labevents` ON physionet_data.mimiciv_hosp.admissions.subject_id = physionet_data.mimiciv_hosp.labevents.subject_id AND physionet_data.mimiciv_hosp.admissions.hadm_id = physionet_data.mimiciv_hosp.labevents.hadm_id\n",
