bq utils refactor for local data

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "39410edc-45cb-484a-93af-60a23ab4c3c2",
    "metadata": {},
    "outputs": [],
@@ -13,66 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ee84893c-3f53-4130-96bc-5a9387d19f93",
    "metadata": {},
    "outputs": [],
    "source": [
     "bq.set_credentials_file('../bq_credentials/client_secret.json')\n",
-    "bq.set_project_id('mimic-iv-418015')"
+    "# bq.set_project_id('mimic-iv-418015')\n",
+    "bq.set_project_id('micro-vine-412020')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dc8cd33d-c19e-434e-9c56-322c8c0ca12b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=236933606679-n0530hpv6li2upvr6ibubbd7f3hik03j.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A38351%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fbigquery&state=HB3ah01lNWND7Of3aFliNMJ40aZmw1&access_type=offline\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "client = bq.get_client()"
+    "client = bq.get_client(use_service_account_auth=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8cec1d03-e5be-41c0-97c6-b44ed816ac56",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/03/22 21:03:01 WARN Utils: Your hostname, KGMSurface resolves to a loopback address: 127.0.1.1; using 10.0.0.136 instead (on interface wlp0s20f3)\n",
-      "24/03/22 21:03:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":: loading settings :: url = jar:file:/home/kevin/anaconda3/envs/mimic-iv-etl/lib/python3.12/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+      ":: loading settings :: url = jar:file:/Users/dunyaoguz/anaconda3/envs/mimic-iv-etl/lib/python3.12/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ivy Default Cache set to: /home/kevin/.ivy2/cache\n",
-      "The jars for the packages stored in: /home/kevin/.ivy2/jars\n",
+      "Ivy Default Cache set to: /Users/dunyaoguz/.ivy2/cache\n",
+      "The jars for the packages stored in: /Users/dunyaoguz/.ivy2/jars\n",
       "com.google.cloud.spark#spark-bigquery-with-dependencies_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-5795150d-2e08-480b-b1b8-13df70e31aec;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-dcc27bf0-4f32-4bdb-a463-057adde88ff7;1.0\n",
       "\tconfs: [default]\n",
       "\tfound com.google.cloud.spark#spark-bigquery-with-dependencies_2.12;0.37.0 in central\n",
       "\t[0.37.0] com.google.cloud.spark#spark-bigquery-with-dependencies_2.12;latest.version\n",
-      ":: resolution report :: resolve 2034ms :: artifacts dl 2ms\n",
+      ":: resolution report :: resolve 1248ms :: artifacts dl 2ms\n",
       "\t:: modules in use:\n",
       "\tcom.google.cloud.spark#spark-bigquery-with-dependencies_2.12;0.37.0 from central in [default]\n",
       "\t---------------------------------------------------------------------\n",
@@ -81,26 +66,37 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   1   |   1   |   0   |   0   ||   1   |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-5795150d-2e08-480b-b1b8-13df70e31aec\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-dcc27bf0-4f32-4bdb-a463-057adde88ff7\n",
       "\tconfs: [default]\n",
       "\t0 artifacts copied, 1 already retrieved (0kB/3ms)\n",
-      "24/03/22 21:03:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/03/28 19:17:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/22 21:03:03 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
    "source": [
-    "spark = bq.get_spark_session(client)"
+    "spark = bq.get_spark_session(use_service_account_auth=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "60430d64-d7eb-49ad-aaf5-7ab9e1127eee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'mimicfouretl.feature_engineering' has no attribute 'icuChartEventsProcessor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chartEventsProcessor \u001b[38;5;241m=\u001b[39m \u001b[43mfe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43micuChartEventsProcessor\u001b[49m(spark)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'mimicfouretl.feature_engineering' has no attribute 'icuChartEventsProcessor'"
+     ]
+    }
+   ],
    "source": [
     "chartEventsProcessor = fe.icuChartEventsProcessor(spark)"
    ]
